--- a/environment.yml
+++ b/environment.yml
@@ -5,7 +5,7 @@ channels:
   - anaconda
   - defaults
 dependencies:
-  - python=3.7
+  - python=3.9
   - numpy
   - pywin32
   - cudatoolkit=11.0
@@ -15,3 +15,9 @@ dependencies:
   - pip
   - pip:
     - git+https://github.com/facebookresearch/detectron2.git
+    - accelerate==0.18.0
+    - setuptools==58.0.4
+    - datasets==2.3.2
+    - transformers==4.28.1
+    - timm==0.4.12
+    - seqeval==1.2.2
