--- a/examples/object_detection/cascade_graphlayoutlm.yaml
+++ b/examples/object_detection/cascade_graphlayoutlm.yaml
@@ -1,5 +1,5 @@
 MODEL:
-  MASK_ON: True
+  MASK_ON: False
   IMAGE_ONLY: True
   META_ARCHITECTURE: "VLGeneralizedRCNN"
   PIXEL_MEAN: [ 127.5, 127.5, 127.5 ]
